# quantum-code-validator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  server.py  start.sh
scripts/: cost.py  format_docs_by_llm.py  parse_pennylane_api.py
src/: constants.py  server.py  setup.py
src/prompts/: __init__.py  common.py
src/storage/: setup.py
src/tools/: common.py  request_reference.py  static_validation.py
tests/tools/: test_static_validation.py
tools/: __init__.py  common.py  request_pennylane_reference.py  request_reference.py  static_validation.py
