[project]
name = "quantum-code-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.1.0",
    "mcp[cli]==1.9.0",
    "pennylane==0.41.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openai>=1.78.1",
]
